GNOME Bugzilla – Bug 770128
Fix screen shooting and recording for multi stage view clutter
Last modified: 2016-09-06 07:42:05 UTC
This makes screen shooting and screen recording work when multi view stage painting (MUTTER_STAGE_VIEWS=1) is enabled. Requires the patch from bug 770127 to function properly.
Created attachment 333603 [details] [review] screenshot: Composite multiple captures into one image When clutter gives us multiple captures (multiple cairo_surface_t's), composite them into one large image and use that as final screenshot result. This makes screenshooting work when mutter uses multiple views.
Created attachment 333604 [details] [review] recorder: Composite captured images before passing into gstreamer Mutter may capture the screen in multiple capture regions. If this is done, take these images and composite them onto one large image, which is then passed into the gstreamer source.
Review of attachment 333603 [details] [review]: looks fine
Review of attachment 333604 [details] [review]: ok
Attachment 333603 [details] pushed as 22f0d30 - screenshot: Composite multiple captures into one image